--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://minkyong00.github.io/update-front-ShowU/",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -17,6 +18,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^6.3.0",
     "global": "^4.4.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
@@ -40,7 +42,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build --add"
   },
   "eslintConfig": {
     "extends": [
